--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "canon",
   "version": "0.1.0",
   "dependencies": {
-    "jshint": "0.9.1",
-    "recess": "1.1.6"
+    "jshint": "0.9.1"
   }
 }
