--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "canon",
   "version": "0.1.0",
   "dependencies": {
+    "chai": "1.3.0",
     "csslint": "0.9.9",
-    "jshint": "0.9.1"
+    "jshint": "0.9.1",
+    "mocha": "1.7.4",
+    "mocha-phantomjs": "1.1.2",
+    "sinon": "1.5.2",
+    "sinon-chai": "2.3.0"
   }
 }
