Add screenshot tests for input styles.

--- a/spec/screenshot/screenshots.yml
+++ b/spec/screenshot/screenshots.yml
@@ -5,4 +5,6 @@ screenshots:
     url: screenshots/layout.html
   - name: Buttons
     url: screenshots/buttons.html
+  - name: Forms
+    url: screenshots/forms.html
 
