Adding Screenshot Tests

--- a/spec/screenshot/screenshots.yml
+++ b/spec/screenshot/screenshots.yml
@@ -5,6 +5,8 @@ screenshots:
     url: screenshots/layout.html
   - name: Nav-Secondary
     url: screenshots/nav-secondary.html
+  - name: Footer
+    url: screenshots/footer.html
   - name: Buttons
     url: screenshots/buttons.html
   - name: Forms
