[Test][26] Ignore screenshots generated during tests.

--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,5 @@ log/
 node_modules/
 package/
 spec/reports/
-spec/skins/**/*_diff.png
-spec/skins/**/*_fresh.png
+spec/skins/*/*/*_diff.png
+spec/skins/*/*/*_fresh.png
