--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "canon",
   "version": "0.1.0",
   "dependencies": {
+    "almond": "~0.2.5",
+    "requirejs": "~2.1.5"
+  },
+  "devDependencies": {
     "chai": "1.4.2",
     "csslint": "0.9.10",
     "jshint": "0.9.1",
