--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "jshint": "0.9.1",
     "mocha": "1.8.1",
     "mocha-phantomjs": "2.0.0",
+    "mocha-sinon": "~0.3.0",
     "sinon": "1.5.2",
     "sinon-chai": "2.3.1"
   }
