--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "dependencies": {
     "almond": "~0.2.5",
+    "bean": "~1.0.3",
+    "bonzo": "~1.3.4",
+    "qwery": "~3.4.1",
     "requirejs": "~2.1.5"
   },
   "devDependencies": {
