[Feature][81] Fix build errors.

--- a/.jshintrc
+++ b/.jshintrc
@@ -23,6 +23,13 @@
     "require",
     "define",
     "describe",
-    "it"
+    "it",
+    "before",
+    "beforeEach",
+    "after",
+    "afterEach",
+    "sinon",
+    "expect",
+    "fixture"
   ]
 }
