--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bean": "~1.0.3",
     "bonzo": "~1.3.4",
     "qwery": "~3.4.1",
+    "ender-library": "git+https://github.rackspace.com/canon/ender-library",
     "requirejs": "~2.1.5"
   },
   "devDependencies": {
