[Test][34] Add test screenshots to run list.

--- a/spec/screenshot/screenshots.yml
+++ b/spec/screenshot/screenshots.yml
@@ -29,3 +29,5 @@ screenshots:
     url: list-table-empty.html
   - name: Content View
     url: content-view.html
+  - name: Tooltip
+    url: tooltip.html
