Use Sauce Labs to run all Selenium tests.

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ lib/images/icon-*.png
 log/
 node_modules/
 package/
+sauce_connect.*
 spec/reports/
 spec/skins/*/*/*_diff.png
 spec/skins/*/*/*_fresh.png
