--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "requirejs": "~2.1.5"
   },
   "devDependencies": {
+    "bower": "0.9.2",
     "chai": "1.4.2",
     "csslint": "0.9.10",
     "jshint": "0.9.1",
