--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "canon",
-  "version": "0.5.0",
+  "version": "1.0.0-rc.1",
   "dependencies": {
     "almond": "~0.2.5",
     "klass": "~1.2.3",
