--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,9 @@
     "node_modules"
   ],
   "dependencies": {
+    "jasmine": "~1.3.1",
+    "jasmine-jquery": "~1.5.8",
     "jquery": "~1.10.2",
-    "normalize-scss": "~2.1.2",
+    "normalize-scss": "~2.1.2"
   }
 }
