--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "chai": "1.4.2",
     "csslint": "0.9.10",
     "jshint": "0.9.1",
+    "karma": "~0.10.1",
+    "karma-junit-reporter": "~0.1.0",
     "mocha": "1.8.1",
     "mocha-phantomjs": "2.0.0",
     "mocha-sinon": "~0.3.0",
