--- a/package.json
+++ b/package.json
@@ -8,15 +8,9 @@
   },
   "devDependencies": {
     "bower": "0.9.2",
-    "chai": "1.4.2",
     "csslint": "0.9.10",
     "jshint": "0.9.1",
     "karma": "~0.10.1",
-    "karma-junit-reporter": "~0.1.0",
-    "mocha": "1.8.1",
-    "mocha-phantomjs": "2.0.0",
-    "mocha-sinon": "~0.3.0",
-    "sinon": "1.5.2",
-    "sinon-chai": "2.3.1"
+    "karma-junit-reporter": "~0.1.0"
   }
 }
