--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   },
   "devDependencies": {
     "bower": "0.9.2",
-    "csslint": "0.9.10",
+    "grunt": "0.4.1",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-jshint": "~0.6.2",
     "jshint": "0.9.1",
-    "karma": "~0.10.1",
-    "karma-junit-reporter": "~0.1.0"
+    "karma": "0.10.1",
+    "karma-junit-reporter": "0.1.0",
   }
 }
