--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "grunt-contrib-jshint": "~0.6.2",
     "grunt-contrib-requirejs": "~0.4.1",
     "grunt-contrib-uglify": "~0.2.2",
+    "grunt-exec": "~0.4.2",
+    "grunt-karma": "~0.6.1",
     "jshint": "0.9.1",
     "karma": "0.10.1",
-    "karma-junit-reporter": "0.1.0",
+    "karma-junit-reporter": "0.1.0"
   }
 }
