[Test][236] Add screenshot test for detail view.

--- a/spec/screenshot/screenshots.yml
+++ b/spec/screenshot/screenshots.yml
@@ -1,6 +1,8 @@
 screenshots:
   - name: Buttons
     url: buttons.html
+  - name: Detail View
+    url: detail-view.html
   - name: Forms
     url: forms.html
   - name: Layout (Fixed)
