--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "bower": "0.9.2",
     "grunt": "0.4.1",
     "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-compass": "~0.5.0",
+    "grunt-contrib-copy": "~0.4.1",
+    "grunt-contrib-cssmin": "~0.6.1",
     "grunt-contrib-jshint": "~0.6.2",
+    "grunt-contrib-requirejs": "~0.4.1",
+    "grunt-contrib-uglify": "~0.2.2",
     "jshint": "0.9.1",
     "karma": "0.10.1",
     "karma-junit-reporter": "0.1.0",
