--- a/spec/screenshot/screenshots.yml
+++ b/spec/screenshot/screenshots.yml
@@ -11,6 +11,10 @@ screenshots:
     url: layout-responsive.html
   - name: List Table
     url: list-table.html
+  - name: List Table Loading
+    url: list-table-loading.html
+  - name: List Table Empty
+    url: list-table-empty.html
   - name: Menu
     url: menu.html
   - name: Popover
