adding create view example and screenshot

--- a/spec/screenshot/screenshots.yml
+++ b/spec/screenshot/screenshots.yml
@@ -3,6 +3,8 @@ screenshots:
     url: buttons.html
   - name: Detail View
     url: detail-view.html
+  - name: Create View
+    url: create-view.html
   - name: Form
     url: form.html
   - name: Form (Horizontal)
