--- a/package.json
+++ b/package.json
@@ -1,6 +1,15 @@
 {
   "name": "canon",
   "version": "1.3.1",
+  "keywords": ["rackspace"],
+  "license": "Apache License, Version 2.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rackerlabs/canon"
+  },
+  "scripts": {
+    "test": "grunt"
+  },
   "dependencies": {
     "almond": "~0.2.5",
     "klass": "~1.2.3",
