--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,12 @@
 language: node_js
 node_js:
-- "0.10"
+- '0.10'
+env:
+  global:
+  - secure: gqoFY8iy73+/y85Je8Q19Ijt7Mif7mj7wLvY2iaNEEFTVeHlUMNear5uqHo1kJr/xxDAtynZ+83OTpElNivD/AGdx+ZPpgXEEK0nNdCmOEkHrPGWfRylqxYGcKSYoDNpDWz4MnHq7+wQFVtj5jPgpVob2GhgVBZoNYm+zSfo+C4=
+  - secure: wj1ZFtsV7EVdZRfkoQ39EC6n1P6dxYIqamlWFpg/BdLztUmNv1H+WT8ZfyneEjjz+ELoz+kTmdNnBnWKOF2KcJZnb6/kXi5LQIWB76fl/6w0e+jgk8gDHOevJdg+UDSL2+tUDU5vKfwB6gVrd5w1LiB3bjm8umoj1tPitXOkvgI=
 before_script:
-- "gem install bundler"
-- "npm install -g bower grunt-cli"
-- "bower install"
-- "bundle install"
+- gem install bundler
+- npm install -g bower grunt-cli
+- bower install
+- bundle install
