--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,7 @@
 {
   "name": "canon",
-  "version": "0.5.0",
+  "version": "1.3.1",
+  "main": "dist/canon.min.css",
   "ignore": [
     "**/.*",
     "components",
@@ -11,5 +12,9 @@
     "jasmine-jquery": "~1.5.8",
     "jquery": "~1.10.2",
     "normalize-scss": "~2.1.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:rackerlabs/canon.git"
   }
 }
