--- a/config/demo.prod.yml
+++ b/config/demo.prod.yml
@@ -1,3 +1,4 @@
 source: "html/demos"
 destination: "_site/demos"
 baseurl: "http://demo.canon.rackspace.com"
+canonurl: "http://ci.canon.rackspace.com/view/Canon/job/canon-screenshot/lastSuccessfulBuild/artifact/dist/"
