--- a/package.json
+++ b/package.json
@@ -30,8 +30,6 @@
     "grunt-contrib-watch": "~0.5.2",
     "grunt-exec": "~0.4.2",
     "grunt-karma": "~0.6.1",
-    "jshint": "0.9.1",
-    "karma": "0.10.1",
-    "karma-junit-reporter": "0.1.0"
+    "jshint": "0.9.1"
   }
 }
