--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "grunt-contrib-connect": "~0.7.1",
     "grunt-contrib-sass": "~0.7.3",
     "grunt-contrib-watch": "~0.6.1",
+    "grunt-exec": "~0.4.5",
     "grunt-jekyll": "~0.4.2"
   }
 }
