--- a/spec/screenshot/screenshots.yml
+++ b/spec/screenshot/screenshots.yml
@@ -5,6 +5,8 @@ screenshots:
     url: detail-view.html
   - name: Create View
     url: create-view.html
+  - name: Facets
+    url: facets.html
   - name: Form
     url: form.html
   - name: Form (Horizontal)
