--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "devDependencies": {
     "grunt": "~0.4.4",
     "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-connect": "~0.7.1",
     "grunt-contrib-sass": "~0.7.3",
+    "grunt-contrib-watch": "~0.6.1",
     "grunt-jekyll": "~0.4.2"
   }
 }
