--- a/config/jekyll.dev.yml
+++ b/config/jekyll.dev.yml
@@ -10,4 +10,4 @@ excerpt_separator: Workaround for https://github.com/mojombo/jekyll/issues/1401
 CANON:
   latest: '1-latest'
   cdnUrl: 'https://eafdbc63c97ce6bec9ef-b0a668e5876bef6fe25684caf71db405.ssl.cf1.rackcdn.com'
-  versions: ['1.5.0', '1.4.1', '1.4.0','1.3.1','1.2.0','1.1.0','1.0.0','1.0.0-rc.3','1.0.0-rc.2','1.0.0-rc.1','0.5.0','0.4.2','0.4.1','0.4.0','0.3.2','0.3.0','0.2.0','0.1.1','0.1.0','0.0.0']
+  versions: ['1.6.0', '1.5.1', '1.5.0', '1.4.1', '1.4.0','1.3.1','1.2.0','1.1.0','1.0.0','1.0.0-rc.3','1.0.0-rc.2','1.0.0-rc.1','0.5.0','0.4.2','0.4.1','0.4.0','0.3.2','0.3.0','0.2.0','0.1.1','0.1.0','0.0.0']
