--- a/package.json
+++ b/package.json
@@ -18,18 +18,20 @@
   "devDependencies": {
     "bower": "0.9.2",
     "connect-livereload": "~0.2.0",
-    "grunt": "0.4.1",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-compass": "~0.5.0",
-    "grunt-contrib-connect": "~0.3.0",
-    "grunt-contrib-copy": "~0.4.1",
+    "grunt": "0.4.2",
+    "grunt-autoprefixer": "^3.0.0",
+    "grunt-contrib-clean": "~0.6.0",
+    "grunt-contrib-connect": "~0.10.1",
+    "grunt-contrib-copy": "~0.8.0",
     "grunt-contrib-cssmin": "~0.6.1",
     "grunt-contrib-jshint": "~0.6.2",
-    "grunt-contrib-requirejs": "~0.4.1",
+    "grunt-contrib-requirejs": "~0.4.4",
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-contrib-watch": "~0.5.2",
-    "grunt-exec": "~0.4.2",
+    "grunt-exec": "~0.4.6",
     "grunt-karma": "~0.6.1",
+    "grunt-sass": "^0.18.1",
+    "grunt-spritesmith": "^4.6.1",
     "jshint": "0.9.1"
   }
 }
