--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,26 @@
 language: node_js
-node_js:
-- '0.10'
 sudo: false
+
+node_js:
+ - '0.10'
+
 branches:
   only:
-  - master
-  - /-job-\d+$/
+    - master
+    - /-job-\d+$/
+
 env:
   global:
-  - secure: gqoFY8iy73+/y85Je8Q19Ijt7Mif7mj7wLvY2iaNEEFTVeHlUMNear5uqHo1kJr/xxDAtynZ+83OTpElNivD/AGdx+ZPpgXEEK0nNdCmOEkHrPGWfRylqxYGcKSYoDNpDWz4MnHq7+wQFVtj5jPgpVob2GhgVBZoNYm+zSfo+C4=
-  - secure: wj1ZFtsV7EVdZRfkoQ39EC6n1P6dxYIqamlWFpg/BdLztUmNv1H+WT8ZfyneEjjz+ELoz+kTmdNnBnWKOF2KcJZnb6/kXi5LQIWB76fl/6w0e+jgk8gDHOevJdg+UDSL2+tUDU5vKfwB6gVrd5w1LiB3bjm8umoj1tPitXOkvgI=
-  - secure: eTQtvsv1T1C1YK38Y6A+tWP5wnzhgAMO6Re9XOicQwW9s+86uBNpFbNlTErbNMFSnHKR7UpcUDmzPt77ahQIDFchnAwiNwJBP1FALFOkt0TZIBdugBHDDP/DzIp5jiwhjVe9XT2gCWB1c6uvUJ9Qb9FygtvKSJ7Lv3+DViyL4To=
-before_script:
-- gem install bundler
-- npm install -g bower grunt-cli
-- bower install
-- bundle install
+    - secure: gqoFY8iy73+/y85Je8Q19Ijt7Mif7mj7wLvY2iaNEEFTVeHlUMNear5uqHo1kJr/xxDAtynZ+83OTpElNivD/AGdx+ZPpgXEEK0nNdCmOEkHrPGWfRylqxYGcKSYoDNpDWz4MnHq7+wQFVtj5jPgpVob2GhgVBZoNYm+zSfo+C4=
+    - secure: wj1ZFtsV7EVdZRfkoQ39EC6n1P6dxYIqamlWFpg/BdLztUmNv1H+WT8ZfyneEjjz+ELoz+kTmdNnBnWKOF2KcJZnb6/kXi5LQIWB76fl/6w0e+jgk8gDHOevJdg+UDSL2+tUDU5vKfwB6gVrd5w1LiB3bjm8umoj1tPitXOkvgI=
+    - secure: eTQtvsv1T1C1YK38Y6A+tWP5wnzhgAMO6Re9XOicQwW9s+86uBNpFbNlTErbNMFSnHKR7UpcUDmzPt77ahQIDFchnAwiNwJBP1FALFOkt0TZIBdugBHDDP/DzIp5jiwhjVe9XT2gCWB1c6uvUJ9Qb9FygtvKSJ7Lv3+DViyL4To=
+
+install:
+  - script/bootstrap
+
 after_success:
-- git describe --exact-match --abbrev=0 && script/deploy-website
+  - git describe --exact-match --abbrev=0 && script/deploy-website
+
 notifications:
   email: false
   irc: chat.freenode.net#canon-dev
