--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,22 @@
 language: node_js
-sudo: false
 node_js:
 - '0.10'
-
+branches:
+  only:
+  - master
+  - /-job-\d+$/
 env:
   global:
   - secure: gqoFY8iy73+/y85Je8Q19Ijt7Mif7mj7wLvY2iaNEEFTVeHlUMNear5uqHo1kJr/xxDAtynZ+83OTpElNivD/AGdx+ZPpgXEEK0nNdCmOEkHrPGWfRylqxYGcKSYoDNpDWz4MnHq7+wQFVtj5jPgpVob2GhgVBZoNYm+zSfo+C4=
   - secure: wj1ZFtsV7EVdZRfkoQ39EC6n1P6dxYIqamlWFpg/BdLztUmNv1H+WT8ZfyneEjjz+ELoz+kTmdNnBnWKOF2KcJZnb6/kXi5LQIWB76fl/6w0e+jgk8gDHOevJdg+UDSL2+tUDU5vKfwB6gVrd5w1LiB3bjm8umoj1tPitXOkvgI=
   - secure: eTQtvsv1T1C1YK38Y6A+tWP5wnzhgAMO6Re9XOicQwW9s+86uBNpFbNlTErbNMFSnHKR7UpcUDmzPt77ahQIDFchnAwiNwJBP1FALFOkt0TZIBdugBHDDP/DzIp5jiwhjVe9XT2gCWB1c6uvUJ9Qb9FygtvKSJ7Lv3+DViyL4To=
-  - secure: MMIqP3HXZcMgpHvxl1UAixYpsGxDyuBBcLkoq2VmkU9Fcp/63HenY6voDSKfQC1NVakd+CJphF9bqRfttessgNYY2g+gBmHSHuRJGbZXHgLz4dFCXeqsB5QN+UTqIHOlaxT3hoTwQrJelfIfgtkpjA0OPeFp9Zgmd9BNOubc2c0=
-  - secure: ez8hZPE0XR2sS3+keFGmVsZ77dlSJI0DMbSpqmx6GXaY6oium9q0+2Tx271Q4gS8vxfLh1b7OrLM6bEUi+ujciAPMO6PyikcC1TkaxZyDqDsHWWqGyV9TO5Eq0POq1UBAcl/4RqGqsDfS6mXA4eim/J2W7uznOO8Ga8Jy9Z1m+w=
-
-install:
-- export PATH=$PATH:$HOME/.bin
-- script/bootstrap
-
-deploy:
-- provider: script
-  script: scripts/release stable $TRAVIS_TAG
-  on:
-    tags: true
-- provider: script
-  script: scripts/release development $TRAVIS_COMMIT
-  on:
-    branch: master
-
+before_script:
+- gem install bundler
+- npm install -g bower grunt-cli
+- bower install
+- bundle install
+after_success:
+- git describe --exact-match --abbrev=0 && script/deploy-website
 notifications:
   email: false
   irc: chat.freenode.net#canon-dev
