chore(release): fix release script path

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ deploy:
   on:
     tags: true
 - provider: script
-  script: scripts/release development $TRAVIS_COMMIT
+  script: script/release development $TRAVIS_COMMIT
   skip_cleanup: true
   on:
     branch: master
