--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
     "node_modules"
   ],
   "dependencies": {
+    "bootstrap-sass": "~3.3.5",
     "jasmine": "~1.3.1",
     "jasmine-jquery": "~1.5.8",
     "jquery": "~1.10.2",
