--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "bower": "0.9.2",
     "connect-livereload": "~0.2.0",
+    "font-awesome": "4.3.0",
     "grunt": "0.4.2",
     "grunt-autoprefixer": "^3.0.0",
     "grunt-contrib-clean": "~0.6.0",
