_config.yml: remove schema from baseurl
This allows canon to be viewed via https as well.

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 source: "docs"
 destination: "_site"
-baseurl: "http://rackerlabs.github.io/canon"
+baseurl: "//rackerlabs.github.io/canon"
 pygments: true
 permalink: /.tmp/null.html
 markdown: redcarpet
